# Road_Management_API

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
geojson_samples/: road_network_aying_1.0.geojson  road_network_bayrischzell_1.0.geojson  road_network_bayrischzell_1.1.geojson
init_scripts/: init-db.sql
src/: custom_middleware.py  database.py  global_models.py  global_schemas.py  global_utils.py  logger.py  main.py  settings.py  setup.py
src/apps/: router_registry.py
src/apps/auth/: router.py  schemas.py  utils.py
src/apps/auth/api/: login_api.py  register_api.py
src/apps/customer/: models.py  router.py  schemas.py
src/apps/customer/api/: create_customer_api.py  list_customers_api.py
src/apps/road_network/: models.py  router.py
src/apps/road_network/api/: create_road_network_api.py  get_road_network_edges_api.py  list_road_networks_api.py  update_road_network_api.py
src/apps/user/: models.py  router.py
